--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<h1>Login Form</h1>
+		<input type="text" placeholder="Username" id="username">
+		<input type="password" placeholder="Password" id="password">
+		<input type="checkbox" id="checkbox">
+		<label for="checkbox">Remember me</label>
+		<input type="submit" id="submit" value="Submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
