--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<form>
 		<h1>Login Form</h1>
+		<label for="username">Username:</label>
 		<input type="text" placeholder="Username" id="username">
 		<input type="password" placeholder="Password" id="password">
 		<input type="checkbox" id="checkbox">
