--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
 		<h1>Login Form</h1>
 		<label for="username">Username:</label>
 		<input type="text" placeholder="Username" id="username">
+		<label for="password">Password:</label>
 		<input type="password" placeholder="Password" id="password">
 		<input type="checkbox" id="checkbox">
 		<label for="username">Remember me</label>
