--- a/main.html
+++ b/main.html
@@ -14,8 +14,9 @@
 		<input type="text" placeholder="Username" id="username">
 		<label for="password">Password:</label>
 		<input type="password" placeholder="Password" id="password">
+		<label for="checkbox">Remember me</label>
 		<input type="checkbox" id="checkbox">
-		<label for="username">Remember me</label>
+		
 		<input type="submit" id="submit" value="Submit">
 	</form>
     <script type="text/javascript" src="./script.js">
