--- a/main.html
+++ b/main.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<form>
-		<h1>Login Form</h1>
-		<label for="username">Username:</label>
-		<input type="text" placeholder="Username" id="username">
-		<label for="password">Password:</label>
-		<input type="password" placeholder="Password" id="password">
-		<label for="checkbox">Remember me:</label>
-		<input type="checkbox" id="checkbox">
-		
-		<input type="submit" id="submit" value="Submit">
-	</form>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <form id="login-form">
+        <h1>Login Form</h1>
 
+        <label for="username">Username:</label>
+        <input type="text" placeholder="Username" id="username">
+
+        <label for="password">Password:</label>
+        <input type="password" placeholder="Password" id="password">
+
+        <label for="checkbox">
+            <input type="checkbox" id="checkbox"> Remember me
+        </label>
+
+        <input type="submit" id="submit" value="Submit">
+    </form>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
