--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
         <input type="password" placeholder="Password" id="password">
 
         <label for="checkbox">
-            <input type="checkbox" id="checkbox"> Remember me
+            <input type="checkbox" id="checkbox"> Remember me:
         </label>
 
         <input type="submit" id="submit" value="Submit">
