--- a/main.html
+++ b/main.html
@@ -22,9 +22,9 @@
             <input type="checkbox" id="checkbox"> Remember me:
         </label>
 
-        <input type="submit" id="submit" value="Submit">
+        <input type="button" id="submit" value="Submit">
     </form>
-
+	<button id="existing">Login as existing user</button>
     <script src="script.js"></script>
 </body>
 
